human-intervention-logs/org.apache.ant:ant-junit:1.10.15/gradle-test/gradle-test-2026-06-08T03-53-24-566467Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.ant:ant-junit:1.10.15
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2471-ebd1b0ae/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 15 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2471-ebd1b0ae/tests/src/org.apache.ant/ant-junit/1.10.15/src/test/java/org_apache_ant/ant_junit/AggregateTransformerTest.java:81: error: reference to assertThat is ambiguous
        assertThat(stylesheet).isInstanceOf(URLResource.class);
        ^
  both method <T>assertThat(T) in Assertions and method <ELEMENT>assertThat(Iterable<? extends ELEMENT>) in Assertions match
  where T,ELEMENT are type-variables:
    T extends Comparable<? super T> declared in method <T>assertThat(T)
    ELEMENT extends Object declared in method <ELEMENT>assertThat(Iterable<? extends ELEMENT>)
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2471-ebd1b0ae/tests/src/org.apache.ant/ant-junit/1.10.15/src/test/java/org_apache_ant/ant_junit/AggregateTransformerTest.java:104: error: Task is abstract; cannot be instantiated
        Task task = new Task();
                    ^
> Task :compileTestJava FAILED
2 errors


FAILURE: Build failed with an exception.

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2471-ebd1b0ae/tests/src/org.apache.ant/ant-junit/1.10.15/build/reports/problems/problems-report.html
* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2471-ebd1b0ae/tests/src/org.apache.ant/ant-junit/1.10.15/src/test/java/org_apache_ant/ant_junit/AggregateTransformerTest.java:81: error: reference to assertThat is ambiguous
          assertThat(stylesheet).isInstanceOf(URLResource.class);
          ^
    both method <T>assertThat(T) in Assertions and method <ELEMENT>assertThat(Iterable<? extends ELEMENT>) in Assertions match
    where T,ELEMENT are type-variables:
      T extends Comparable<? super T> declared in method <T>assertThat(T)
      ELEMENT extends Object declared in method <ELEMENT>assertThat(Iterable<? extends ELEMENT>)
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2471-ebd1b0ae/tests/src/org.apache.ant/ant-junit/1.10.15/src/test/java/org_apache_ant/ant_junit/AggregateTransformerTest.java:104: error: Task is abstract; cannot be instantiated
          Task task = new Task();
                      ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).


Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.
BUILD FAILED
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
 in 3s

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2471-ebd1b0ae/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.ant:ant-junit:1.10.15 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
